fix link issues

--- a/choice_2a.html
+++ b/choice_2a.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 
-    <title>Forest Entrance</title>
+    <title>Forest Path</title>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Forest Entrance</h1> 
+    <h1>Forest Path</h1> 
     <img src="index.png">
     <p>You come across the entrance to the forest. 
     Two paths lay before you. The path on the right leads to 
