--- a/choice_2b.html
+++ b/choice_2b.html
@@ -15,6 +15,6 @@
     </p>
     <h2>Which Way Do You Choose?</h2>
     <p> <a href="choice_4a.html" id="choice">Follow that wisp</a> <-------->              
-        <a href="gameover1.html" id="choice">Leap of Faith</a></p>
+        <a href="gameover_1.html" id="choice">Leap of Faith</a></p>
 </body>
 </html>
