start Forest path

--- a/choice_2a.html
+++ b/choice_2a.html
@@ -8,12 +8,12 @@
 <body>
     <h1>Forest Path</h1> 
     <img src="index.png">
-    <p>You come across the entrance to the forest. 
-    Two paths lay before you. The path on the right leads to 
-    straight into the woods. You can see a deer in the distance.
-    The path on the right follows a river into the forest.</p>
+    <p>You follow the path with the deer. Maybe it knows something your don't?
+        The deer runs off as you get close, but turns to look at you after going
+        distance. Watching you. Almost like it wants you to follow it.
+    </p>
     <h2>Which Way Do You Choose?</h2>
-    <p> <a href="choice_2a.html" id="choice">Left</a> <-------->              
-        <a href="choice_2b.html" id="choice">Right</a></p>
+    <p> <a href="choice_3.html" id="choice">Follow the deer</a> <-------->              
+        <a href="choice_4b.html" id="choice">Nope. I'll go elsewhere</a></p>
 </body>
 </html>
