--- a/retry_2.html
+++ b/retry_2.html
@@ -14,7 +14,7 @@
         once more, aiming to finish you off.
     </p>
     <h2>Game Over</h2>
-    <p> <a href="choice_swin2.html" id="choice">Charge!</a> <-------->              
+    <p> <a href="swin_2.html" id="choice">Charge!</a> <-------->              
         <a href="choice_1.html" id="choice">Fine...</a></p>
 </body>
 </html>
