--- a/choice_4a.html
+++ b/choice_4a.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 
-    <title>Forest Entrance</title>
+    <title>Forest Wisp</title>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Forest Entrance</h1> 
+    <h1>Forest Wis[</h1> 
     <img src="index.png">
-    <p>You come across the entrance to the forest. 
-    Two paths lay before you. The path on the right leads to 
-    straight into the woods. You can see a deer in the distance.
-    The path on the right follows a river into the forest.</p>
+    <p>You run after the wisp of light. The wisp floats throught the forest
+        leading into a clearing. You hear rustling in the bushes as another wisp
+        flies out from another direction, with... another you?
+    </p>
     <h2>Which Way Do You Choose?</h2>
-    <p> <a href="choice_2a.html" id="choice">Left</a> <-------->              
-        <a href="choice_2b.html" id="choice">Right</a></p>
+    <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
+        <a href="choice_5.html" id="choice">Guard!</a></p>
 </body>
 </html>
