--- a/choice_2b.html
+++ b/choice_2b.html
@@ -11,7 +11,7 @@
     <p>You follow the river deeper into the forest. As you come to
         the end of the river, the river runs off into a large waterfall.
         The path, however, contiues on into the forest, a small wisp of light
-        disappearing into the tree.
+        disappearing into the trees.
     </p>
     <h2>Which Way Do You Choose?</h2>
     <p> <a href="choice_4a.html" id="choice">Follow that wisp</a> <-------->              
