add choice 4b. fix choice 4a

--- a/choice_4a.html
+++ b/choice_4a.html
@@ -6,7 +6,7 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Forest Wis[</h1> 
+    <h1>Forest Wisp</h1> 
     <img src="index.png">
     <p>You run after the wisp of light. The wisp floats throught the forest
         leading into a clearing. You hear rustling in the bushes as another wisp
