--- a/choice_4b.html
+++ b/choice_4b.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 
-    <title>Forest Entrance</title>
+    <title>Forest Battle</title>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Forest Entrance</h1> 
+    <h1>Forest Battle</h1> 
     <img src="index.png">
-    <p>You come across the entrance to the forest. 
-    Two paths lay before you. The path on the right leads to 
-    straight into the woods. You can see a deer in the distance.
-    The path on the right follows a river into the forest.</p>
+    <p>You run into the forest. You're NOT following some creepy deer. Instead,
+        you come across a clearing. Watching from the bushes, you see two versions
+        of yourself fighting.
+    </p>
     <h2>Which Way Do You Choose?</h2>
-    <p> <a href="choice_2a.html" id="choice">Left</a> <-------->              
-        <a href="choice_2b.html" id="choice">Right</a></p>
+    <p> <a href="gameover_3.html" id="choice">Join in</a> <-------->              
+        <a href="choice_6.html" id="choice">Ignore them</a></p>
 </body>
 </html>
