--- a/choice_4c.html
+++ b/choice_4c.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
 
-    <title></title>
+    <title>Forest ...You?</title>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Off the Waterfall</h1> 
+    <h1>Forest ...You?</h1> 
     <img src="index.png">
-    <p>Well. You threw yourself over the edge of the waterfall with a majestic
-        swan dive. Great form by the way. You would make a great competitive diver.
-        That is, if you didn't land in the large amount of jagged rocks at the
-        bottom of the waterfall. Shoulda looked before you leaped. Only one thing
-        to do now.
+    <p>The deer happily accepts your offering, enjoying your lunch.
+        The deer then turns into a wisp, flying off into the woods. 
+        You run after the wisp of light. The wisp floats throught the forest
+        leading into a clearing, where you find another...you?
     </p>
-    <h2>Game Over</h2>
-    <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
-        <a href="retry_1.html" id="choice">I made my choice</a></p>
+    <h2>Which Way Do You Choose?</h2>
+    <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
+        <a href="choice_5.html" id="choice">Guard!</a></p>
 </body>
 </html>
