add placeholder text

--- a/choice_4a.html
+++ b/choice_4a.html
@@ -12,7 +12,7 @@
         leading into a clearing. You hear rustling in the bushes as another wisp
         flies out from another direction, with... another you?
     </p>
-    <h2>Which Way Do You Choose?</h2>
+    <h2>What Do You Do?</h2>
     <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
         <a href="choice_5.html" id="choice">Guard!</a></p>
 </body>
