--- a/choice_4b.html
+++ b/choice_4b.html
@@ -12,7 +12,7 @@
         you come across a clearing. Watching from the bushes, you see two versions
         of yourself fighting.
     </p>
-    <h2>Which Way Do You Choose?</h2>
+    <h2>What Do You Do?</h2>
     <p> <a href="gameover_3.html" id="choice">Join in</a> <-------->              
         <a href="choice_6.html" id="choice">Ignore them</a></p>
 </body>
