--- a/choice_4c.html
+++ b/choice_4c.html
@@ -13,7 +13,7 @@
         You run after the wisp of light. The wisp floats throught the forest
         leading into a clearing, where you find another...you?
     </p>
-    <h2>Which Way Do You Choose?</h2>
+    <h2>What Do You Do?</h2>
     <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
         <a href="choice_5.html" id="choice">Guard!</a></p>
 </body>
