--- a/gameover_4.html
+++ b/gameover_4.html
@@ -6,11 +6,15 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>One Left Standing</h1> 
+    <h1>Ruler of the Forest</h1> 
     <img src="index.png">
-    <p>Well. You won. Two yous have fallen at your feet. Both defeated. ...Wait.
-        You're not the you we've been following. We aren't going to follow an
-        IMPOSTER!
+    <p>Congrats! As you place the throny crown on your head,
+        you feel a strange sensation. This is where you belong.
+        This forest, this stump. This is your throne, and this is your
+        kingdom. You shall reign forever. That is, until you stop feeling
+        your body. You look down and watch as you body gets absorbed into
+        the stump, you becoming one of the many faces on the stump you hadn't
+        seen until now. Maybe you shouldn't have placed the strange crown on your head.
     </p>
     <h2>Game Over</h2>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
