--- a/win_1.html
+++ b/win_1.html
@@ -6,16 +6,12 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>A Fight to Remeber</h1> 
+    <h1>A Mystical Forest</h1> 
     <img src="index.png">
-    <p>You raise yourself up, stick in hand. You bonk the deer with 
-        the stick before it tramples you. You then repeat this several times
-        until the deer runs off. Against all odds, you won. You return home,
-        outside of the forest, get your wounds treated, and recount your epic
-        battle againt the "horde" of deer that attacked you.
+    <p>You shake your head. Copies of you, wisps of light
     </p>
     <h2>You Win!</h2>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
-        <a href="index.html" id="choice">Wonderful.</a></p>
+        <a href="index.html" id="choice">I wonder...</a></p>
 </body>
 </html>
