--- a/win_1.html
+++ b/win_1.html
@@ -8,7 +8,10 @@
 <body>
     <h1>A Mystical Forest</h1> 
     <img src="index.png">
-    <p>You shake your head. Copies of you, wisps of light
+    <p>You shake your head. Copies of you, wisps of light, strange deer. This is
+        too much. You just wanted to go on a simple walk tp clear your
+        head. You turn back, retracing your steps until you return to town.
+        However, you can shake the feeling like you were on the cusps of greatness.
     </p>
     <h2>You Win!</h2>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
