--- a/win_2.html
+++ b/win_2.html
@@ -6,16 +6,17 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>A Fight to Remeber</h1> 
+    <h1>An Ancient Memento</h1> 
     <img src="index.png">
-    <p>You raise yourself up, stick in hand. You bonk the deer with 
-        the stick before it tramples you. You then repeat this several times
-        until the deer runs off. Against all odds, you won. You return home,
-        outside of the forest, get your wounds treated, and recount your epic
-        battle againt the "horde" of deer that attacked you.
+    <p>You lift the crown up, tempted to place it on your head.
+        You then notice the faces in the stump the crown was on. Maybe
+        its best that you don't wear this crown. You place it in your
+        backpack, and start on your way home. The crown now rests on your
+        mantle, a new family hierloom. Though, you wonder if you really
+        found everything.
     </p>
     <h2>You Win!</h2>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
-        <a href="index.html" id="choice">Wonderful.</a></p>
+        <a href="index.html" id="choice">What if..?</a></p>
 </body>
 </html>
