--- a/choice_4a.html
+++ b/choice_4a.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Forest Wisp</h1> 
     <img src="index.png">
-    <p>You run after the wisp of light. The wisp floats throught the forest
+    <p>You run after the wisp of light. The wisp floats through the forest
         leading into a clearing. You hear rustling in the bushes as another wisp
         flies out from another direction, with... another you?
     </p>
