--- a/choice_1.html
+++ b/choice_1.html
@@ -9,9 +9,9 @@
     <h1>Forest Entrance</h1> 
     <img src="index.png">
     <p>You come across the entrance to the forest. 
-    Two paths lay before you. The path on the left leads to 
-    straight into the woods. You can see a deer in the distance.
-    The path on the right follows a river into the forest.</p>
+    Two paths lay before you. The path on the left leads 
+    straight into the woods. You can see a deer standing in the distance.
+    The path on the right follows a river deeper into the forest.</p>
     <h2>Which Way Do You Choose?</h2>
     <p> <a href="choice_2a.html" id="choice">Left</a> <-------->              
         <a href="choice_2b.html" id="choice">Right</a></p>
