--- a/choice_3.html
+++ b/choice_3.html
@@ -12,7 +12,7 @@
         The sunlight barely breaks through the canopy above. The deer turns to
         look at you. Like it wants something. You think to what you had in your
         backpack. Water and your lunch. Now that you think about it, you are
-        kinda humgry
+        kinda hungry...
     </p>
     <h2>What Do You Do?</h2>
     <p> <a href="gameover_2.html" id="choice">Eat your lunch</a> <-------->              
