--- a/choice_4c.html
+++ b/choice_4c.html
@@ -10,7 +10,7 @@
     <img src="index.png">
     <p>The deer happily accepts your offering, enjoying your lunch.
         The deer then turns into a wisp, flying off into the woods. 
-        You run after the wisp of light. The wisp floats throught the forest
+        You run after the wisp of light. The wisp floats through the forest
         leading into a clearing, where you find another...you?
     </p>
     <h2>What Do You Do?</h2>
