add final secret win and gameover screens

--- a/swin_1.html
+++ b/swin_1.html
@@ -6,16 +6,16 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>A Fight to Remeber</h1> 
+    <h1>A Very Adventurous Exploer</h1> 
     <img src="index.png">
-    <p>You raise yourself up, stick in hand. You bonk the deer with 
-        the stick before it tramples you. You then repeat this several times
-        until the deer runs off. Against all odds, you won. You return home,
-        outside of the forest, get your wounds treated, and recount your epic
-        battle againt the "horde" of deer that attacked you.
+    <p>Congrats. You thought outside of the box, and found this amazing secret.
+        I hope its up to your standards. I mean, you did have to go out of your way
+        to find this. Now, you've either explored the entire game, or you're just
+        very thorough when playing games. Anyways, you know the drill. Only one
+        thing to do now
     </p>
     <h2>You Win!</h2>
-    <p> <a href="index.html" id="choice">Restart</a> <-------->              
-        <a href="index.html" id="choice">Wonderful.</a></p>
+    <p> <a href="gameover_5.html" id="choice">I expected more</a> <-------->              
+        <a href="index.html" id="choice">Alright</a></p>
 </body>
 </html>
