--- a/gameover_5.html
+++ b/gameover_5.html
@@ -6,14 +6,12 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>One Left Standing</h1> 
+    <h1>Fine. There is More.</h1> 
     <img src="index.png">
-    <p>Well. You won. Two yous have fallen at your feet. Both defeated. ...Wait.
-        You're not the you we've been following. We aren't going to follow an
-        IMPOSTER!
+    <p>Well. Here you go. You've lost now. Are you happy now?
     </p>
     <h2>Game Over</h2>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
-        <a href="choice_1.html" id="choice">Fair enough</a></p>
+        <a href="choice_1.html" id="choice">No.</a></p>
 </body>
 </html>
