--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Into the Forest</h1>
-    <img src="index.png">
+    <img src="index.png" alt="" usemap="#swin">
+    <map name="swin">
+    <area shape="circle" coords="360, 210, 20" href="swin_1.html" alt="Secret Win" />
+   </map>
     <p>Press <a href="choice_1.html">START</a> to begin.</p>
+    
 </body>
 </html>
