add text shake animation

--- a/choice_1.html
+++ b/choice_1.html
@@ -13,7 +13,9 @@
     straight into the woods. You can see a deer standing in the distance.
     The path on the right follows a river deeper into the forest.</p>
     <h2>Which Way Do You Choose?</h2>
+    <div>
     <p> <a href="choice_2a.html" id="choice">Left</a> <-------->              
         <a href="choice_2b.html" id="choice">Right</a></p>
+</div>
 </body>
 </html>
