--- a/choice_2a.html
+++ b/choice_2a.html
@@ -13,7 +13,9 @@
         distance. Watching you. Almost like it wants you to follow it.
     </p>
     <h2>Which Way Do You Choose?</h2>
+    <div>
     <p> <a href="choice_3.html" id="choice">Follow the deer</a> <-------->              
         <a href="choice_4b.html" id="choice">Nope. I'll go elsewhere</a></p>
+      </div>  
 </body>
 </html>
