--- a/choice_2b.html
+++ b/choice_2b.html
@@ -14,7 +14,9 @@
         the distance disappearing into the trees.
     </p>
     <h2>Which Way Do You Choose?</h2>
+    <div>
     <p> <a href="choice_4a.html" id="choice">Follow that wisp</a> <-------->              
         <a href="gameover_1.html" id="choice">Leap of Faith</a></p>
+        </div>
 </body>
 </html>
