--- a/choice_3.html
+++ b/choice_3.html
@@ -15,7 +15,9 @@
         kinda hungry...
     </p>
     <h2>What Do You Do?</h2>
+    <div>
     <p> <a href="gameover_2.html" id="choice">Eat your lunch</a> <-------->              
         <a href="choice_4c.html" id="choice">Offer lunch to the deer</a></p>
+        </div>
 </body>
 </html>
