--- a/choice_4a.html
+++ b/choice_4a.html
@@ -13,7 +13,9 @@
         flies out from another direction, with... another you?
     </p>
     <h2>What Do You Do?</h2>
+    <div>
     <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
         <a href="choice_5.html" id="choice">Guard!</a></p>
+       </div> 
 </body>
 </html>
