--- a/choice_4b.html
+++ b/choice_4b.html
@@ -13,7 +13,9 @@
         of yourself fighting.
     </p>
     <h2>What Do You Do?</h2>
+    <div>
     <p> <a href="gameover_3.html" id="choice">Join in</a> <-------->              
         <a href="choice_6.html" id="choice">Ignore them</a></p>
+        </div>
 </body>
 </html>
