--- a/choice_4c.html
+++ b/choice_4c.html
@@ -14,7 +14,9 @@
         leading into a clearing, where you find another...you?
     </p>
     <h2>What Do You Do?</h2>
+    <div>
     <p> <a href="gameover_3.html" id="choice">Charge!</a> <-------->              
         <a href="choice_5.html" id="choice">Guard!</a></p>
+    </div>    
 </body>
 </html>
