--- a/choice_5.html
+++ b/choice_5.html
@@ -13,7 +13,9 @@
         the woods.
     </p>
     <h2>Which Way Do You Choose?</h2>
+    <div>
     <p> <a href="choice_6.html" id="choice">Venture Forth</a> <-------->              
         <a href="win_1.html" id="choice">Go Home</a></p>
+     </div>   
 </body>
 </html>
