--- a/choice_6.html
+++ b/choice_6.html
@@ -13,7 +13,9 @@
         neat trinket to take home. Or wear.
     </p>
     <h2>What Will You Do?</h2>
+    <div>
     <p> <a href="gameover_4.html" id="choice">Wear the Crown</a> <-------->              
         <a href="win_2.html" id="choice">Take it home</a></p>
+    </div>    
 </body>
 </html>
