--- a/gameover_1.html
+++ b/gameover_1.html
@@ -15,7 +15,9 @@
         to do now.
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
         <a href="retry_1.html" id="choice">I made my choice</a></p>
+    </div>    
 </body>
 </html>
