--- a/gameover_2.html
+++ b/gameover_2.html
@@ -13,7 +13,9 @@
         own lunch. The deer, however, disagrees, and goes ahead and tramples you.
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <-------->              
         <a href="retry_2.html" id="choice">I can still fight!</a></p>
+     </div>   
 </body>
 </html>
