--- a/gameover_3.html
+++ b/gameover_3.html
@@ -13,7 +13,9 @@
         IMPOSTER!
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
         <a href="choice_1.html" id="choice">Fair enough</a></p>
+    </div>    
 </body>
 </html>
