--- a/gameover_4.html
+++ b/gameover_4.html
@@ -17,7 +17,9 @@
         seen until now. Maybe you shouldn't have placed the strange crown on your head.
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
         <a href="choice_1.html" id="choice">Fair enough</a></p>
+    </div>    
 </body>
 </html>
