--- a/gameover_5.html
+++ b/gameover_5.html
@@ -11,7 +11,9 @@
     <p>Well. Here you go. You've lost now. Are you happy now?
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Retry from start</a> <--------->              
         <a href="choice_1.html" id="choice">No.</a></p>
+     </div>   
 </body>
 </html>
