--- a/retry_1.html
+++ b/retry_1.html
@@ -10,7 +10,9 @@
     <img src="index.png">
     <p>Yes. You did. Glad you realized that. Lets head back to the entrance now.</p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="choice_1.html" id="choice">Fine</a> <-------->              
         <a href="choice_1.html" id="choice">I refuse!</a></p>
+     </div>   
 </body>
 </html>
