--- a/retry_2.html
+++ b/retry_2.html
@@ -14,7 +14,9 @@
         once more, aiming to finish you off.
     </p>
     <h2>Game Over</h2>
+    <div>
     <p> <a href="swin_2.html" id="choice">Charge!</a> <-------->              
         <a href="choice_1.html" id="choice">Fine...</a></p>
+     </div>   
 </body>
 </html>
