--- a/swin_1.html
+++ b/swin_1.html
@@ -15,7 +15,9 @@
         thing to do now
     </p>
     <h2>You Win!</h2>
+    <div>
     <p> <a href="gameover_5.html" id="choice">I expected more</a> <-------->              
         <a href="index.html" id="choice">Alright</a></p>
+    </div>    
 </body>
 </html>
