--- a/swin_2.html
+++ b/swin_2.html
@@ -15,7 +15,9 @@
         battle againt the "horde" of deer that attacked you.
     </p>
     <h2>You Win!</h2>
+    <div>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
         <a href="index.html" id="choice">Wonderful.</a></p>
+    </div>    
 </body>
 </html>
