--- a/win_1.html
+++ b/win_1.html
@@ -14,7 +14,9 @@
         However, you can shake the feeling like you were on the cusps of greatness.
     </p>
     <h2>You Win!</h2>
+    <div>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
         <a href="index.html" id="choice">I wonder...</a></p>
+     </div>   
 </body>
 </html>
