--- a/win_2.html
+++ b/win_2.html
@@ -16,7 +16,9 @@
         found everything.
     </p>
     <h2>You Win!</h2>
+    <div>
     <p> <a href="index.html" id="choice">Restart</a> <-------->              
         <a href="index.html" id="choice">What if..?</a></p>
+     </div>   
 </body>
 </html>
