add gameover image shake

--- a/gameover_1.html
+++ b/gameover_1.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Off the Waterfall</h1> 
+    <div>
     <img src="index.png">
+    </div>
     <p>Well. You threw yourself over the edge of the waterfall with a majestic
         swan dive. Great form by the way. You would make a great competitive diver.
         That is, if you didn't land in the large amount of jagged rocks at the
