--- a/gameover_2.html
+++ b/gameover_2.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Unhappy Deer</h1> 
+    <div>
     <img src="index.png">
+    </div>
     <p>You sit down in front of the deer, pulling out your lunch. The deer
         becomes agitated as you begin eating it. Oh well. It shoulda brought its
         own lunch. The deer, however, disagrees, and goes ahead and tramples you.
