--- a/gameover_3.html
+++ b/gameover_3.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>One Left Standing</h1> 
+    <div>
     <img src="index.png">
+    </div>
     <p>Well. You won. Two yous have fallen at your feet. Both defeated. ...Wait.
         You're not the you we've been following. We aren't going to follow an
         IMPOSTER!
