--- a/gameover_4.html
+++ b/gameover_4.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Ruler of the Forest</h1> 
+    <div>
     <img src="index.png">
+    </div>
     <p>Congrats! As you place the throny crown on your head,
         you feel a strange sensation. This is where you belong.
         This forest, this stump. This is your throne, and this is your
